--- a/public/lab_3/style.css
+++ b/public/lab_3/style.css
@@ -14,13 +14,13 @@ body {
   width: 70%;
   min-width: 800px;
   margin: 0 auto;
-  background-color: #6091C3;
+  background-color: #00FFFF;
 }
 
 /* || typography */
 
 h1, h2, h3 {
-  font-family: 'Cinzel Decorative', cursive;
+  font-family: 'Kufam', cursive;
   color: #2a2a2a;
 }
 
@@ -37,7 +37,7 @@ h1 {
 }
 
 h2 {
-  font-size: 5rem;
+  font-size: 7rem;
   text-align: center;
   font-weight: 800;
 }
@@ -49,6 +49,7 @@ h3 {
 p, li {
   font-size: 1.6rem;
   line-height: 1.5;
+
 }
 
 /* || header layout */
@@ -60,7 +61,7 @@ p, li {
 }
 
 body > * {
-  background-color: red;
+  background-color: blueviolet;
   padding: 1%;
 }
 
@@ -74,9 +75,10 @@ h1 {
   text-transform: uppercase;
 }
 
-header img {
+.header img {
   display: block;
-  height: 60px;
+  width: 99px;
+  height: 99px;
   padding-top: 20.15px;
 }
 
@@ -114,10 +116,12 @@ nav a, nav span {
 
 .main {
   display: flex;
+  
 }
 
 .article, .section {
   flex: 4;
+  font-size: 1.9rem;
 }
 
 .aside {
@@ -138,4 +142,5 @@ nav a, nav span {
 
 .footer {
   margin-top: 10px;
+  font-size: 1.7rem;
 }
