--- a/public/lab_4/style.css
+++ b/public/lab_4/style.css
@@ -33,15 +33,21 @@ h1 {
   align-items: center;
 }
 
+.flex-outer{
+  max-width: 800px;
+  padding: 0px 16px;
+}
+
 .flex-outer > li > label,
 .flex-outer li p {
-  flex: 1 0 120px;
-  max-width: 220px;
+  flex: 1 0 125px;
+  max-width: 225px;
+  padding: 8px;
 }
 
 .flex-outer > li > label + *,
 .flex-inner {
-  flex: 1 0 220px;
+  flex: 1 0 225px;
 }
 
 .flex-outer li button {
@@ -56,9 +62,15 @@ h1 {
 }
 
 .flex-inner li {
-  width: 100px;
+  width: 80px;
 }
 
 .flex-inner {
   justify-content: space-between;
+}
+
+.flex-outer > li > button {
+  margin-left: 0px;
+  padding: 6px 12px;
+  border-radius: 3px;
 }
