--- a/public/asst-1/style.css
+++ b/public/asst-1/style.css
@@ -15,12 +15,58 @@
 
 .wrapper .container > div{
     display: flex;
+    justify-content: space-between;
+}
+
+h2, p, ol {
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+li {
+    font-family: 'Lobster', cursive;
+}
+
+h1 {
+    font-size: 2rem;
+    text-align: left;
+    font-weight: 800;
+}
+  
+h2 {
+    font-size: 1rem;
+    text-align: left;
+    font-weight: 600;
+}
+  
+p, li {
+    font-size: 1rem;
+}
+
+.figure{
+    flex: 1 0 auto; 
+    text-align: justify;
+    width: 50px;
+    margin-right: 15px;
+    border-radius: 4px;
+}
+
+figure img{
+    display: block;
+    margin: 0 auto
+}
+
+.header img {
+    display: block;
+    height: 250px;
+    padding-top: 20.15px;
+    border-radius: 4px;
 }
 
 .container{
+    background-color: #f1f088;
     flex-direction: row;
     flex-wrap: wrap;
     display: flex;
     align-items: flex-start;
-    justify-content: space-between;
+    justify-content: center;
 }
