--- a/public/asst-1/style.css
+++ b/public/asst-1/style.css
@@ -6,42 +6,49 @@
     display: flex;
     flex-flow: row wrap;
     align-items: center;
-    justify-content: center;
+    font-family: 'Oleo Script', cursive;
 }
 
-body{
-    background-color: lightblue;
-}
-
-.content1{
-    flex: 1 0 auto;
-    display: flex;
-    margin-right: 15px;
-    background-color: lightgray;
-}
 .content{
     display: flex;
     flex: 0 1 auto;
 }
+.content h2{
+    font-family: 'Oleo Script', cursive;
+}
+
 
 .header img{
 max-width: 354px;
 }
 
 .container{
-    size: auto;
+    width: 450 960;
     background-color: #f1f088;
     flex-flow: row wrap;
     display: flex;
     align-items: flex-start;
     justify-content: center;
 }
-.content1 img{
+.figure img{
     border-radius: 4px;
     border-width: 1px;
     border-style: solid;
     max-width: 199px;
 }
-.wrapper{
+.wrapper .container{
+    flex: 0 1 auto;
+    margin-right: 15px;
+    width: 75 200;
     justify-content: space-between;
+}
+
+body{
+    background-color: lightblue;
+}
+
+.figure{
+    flex: 1 0 auto;
+    background-color: lightgray;
+    margin-right: 0px;
 }
