--- a/public/lab_7/styles.css
+++ b/public/lab_7/styles.css
@@ -47,7 +47,7 @@ body {
 
 .flex-outer button {
   background-color: darkolivegreen;
-  color: white;
+  color:purple;
   padding: 6px 12px;
   border: none;
   text-transform: uppercase;
@@ -84,8 +84,8 @@ h1 {
   margin: 20px 50px;
   padding: 0 20px;
   min-height: 75px;
-  background-color: darkolivegreen;
-  color: white;
+  background-color: red;
+  color:blue;
   display: flex;
   
   align-items: center;
